@@ -622,6 +622,12 @@ link_list_panel(Buffer *buf)
     Str tmp = Strnew_charp("<title>Link List</title>\
 <h1 align=center>Link List</h1>\n");
 
+    if (buf->bufferprop & BP_INTERNAL ||
+        (buf->linklist == NULL && buf->href == NULL &&
+         buf->img == NULL)) {
+		return NULL;
+    }
+
     if (buf->linklist) {
 	Strcat_charp(tmp, "<hr><h2>Links</h2>\n<ol>\n");
 	for (l = buf->linklist; l; l = l->next) {
